# skills_rag_mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.en.md  README.ko.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
bench/: .dockerignore  Dockerfile  README.md  run_matrix.py  run_model.py
bootstrap-skill/using-skill-rag/: SKILL.md
docs/benchmarks/: 2026-07-14-docker-multilingual.md
docs/design-docs/: core-beliefs.md  implementation-history.md  index.md  mcp-interface.md  meta-skill-bootstrap.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md  skill-rag.md
docs/references/: lancedb-llms.txt  mcp-llms.txt  opus-mt-llms.txt  sentence-transformers-llms.txt  tomlkit-llms.txt
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-02-bootstrap-refresh-policy.md  README.md  (+13 more)
eval/: queries.jsonl
eval/fixtures/: natural-queries.jsonl  no-match-queries.jsonl
scripts/: install.sh
src/skill_rag/: agents.py  cli.py  collect.py  corpus.py  embed.py  evaluator.py  index.py  lifecycle.py  loader.py  mcp_config.py  mcp_server.py  models.py  normalize.py  offline.py  parser.py  retrieve.py  sparse.py  sync.py  translate.py
tests/: conftest.py  test_agent_tag.py  test_cli.py  test_collect.py  test_corpus.py  test_e2e.py  test_embed.py  test_evaluator.py  test_index.py  test_lifecycle.py  test_loader.py  test_mcp_config.py  test_mcp_server.py  test_models.py  test_normalize.py  test_offline.py  test_parser.py  test_retrieve.py  test_sparse.py  test_sync.py  test_translate.py
(+16 files in other folders)
