[project]
name = "skill-rag"
version = "0.1.0"
description = "Local RAG over Claude/Codex skill frontmatter, exposed via CLI and MCP."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "skill-rag contributors" }]
license = { text = "MIT" }
dependencies = [
    "lancedb>=0.27.0",
    "sentence-transformers>=5.0.0",
    "pyyaml>=6.0.2",
    "typer>=0.20.0",
    "mcp>=1.20.0",
    "pyarrow>=23.0.0",
    "tomlkit>=0.13.0",
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
]

[project.scripts]
skill-rag = "skill_rag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_rag"]
